Card, Dialog and Toolbar added

--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="400dp"
     android:layout_marginHorizontal="20dp"
-    android:background="#0F000000">
+    android:background="@drawable/dialog_bg">
 
     <TextView
         android:id="@+id/alertName"
